data/derived/comb/progs/unify/prog3766.ml.out
Characters 382-383:
  1 /. result
  ^
Error: This expression has type int but an expression was expected of type
         float
